# wasm-webworker-poc

./: Cargo.toml  README.md
wasmlib/: Cargo.toml  db.js  index.html  main.js
wasmlib/src/: lib.rs
