[package]
name = "wasmlib"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = { version = "0.1.7" }
wasm-bindgen = "0.2.84"
web-sys = "0.3.72"
anyhow = "1.0.93"
serde_json = "1.0.132"
serde = { version = "1.0.215", features = ["derive"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[lib]
crate-type = ["cdylib", "rlib"]
